--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -810,7 +810,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/button_export_contest"
                 app:layout_constraintVertical_bias="0.5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <!--pagina-->
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_7"
             android:layout_width="match_parent"
@@ -884,6 +884,239 @@
                 app:layout_constraintStart_toEndOf="@+id/button_select_bluetooth"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.742" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+         <!--pagina-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pag_8"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#CCC2C2">
+
+            <TextView
+                android:id="@+id/label_logger"
+                android:layout_width="213dp"
+                android:layout_height="36dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Logger"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/editText_TX_Nr"
+                app:layout_constraintEnd_toStartOf="@+id/mode_indicator"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/qrg_indicator"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <TextView
+                android:id="@+id/qrg_indicator"
+                android:layout_width="197dp"
+                android:layout_height="65dp"
+                android:layout_marginEnd="534dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:gravity="center"
+                android:textColor="@color/design_default_color_primary"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/editText_RX_Call"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <TextView
+                android:id="@+id/mode_indicator"
+                android:layout_width="197dp"
+                android:layout_height="65dp"
+                android:layout_marginStart="534dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:gravity="center"
+                android:textColor="@color/design_default_color_primary"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/editText_RX_RST"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <EditText
+                android:id="@+id/editText_RX_Call"
+                style="@style/text_new_user"
+                android:layout_width="150dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:layout_marginBottom="242dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="RX Call"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/editText_TX_RST"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_TX_RST"
+                style="@style/text_new_user"
+                android:layout_width="73dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="TX RST"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Call"
+                app:layout_constraintEnd_toStartOf="@+id/editText_TX_Nr"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_RX_Call"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_TX_Nr"
+                style="@style/text_new_user"
+                android:layout_width="100dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="TX Nr"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_RST"
+                app:layout_constraintEnd_toStartOf="@+id/editText_TX_Exch"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_TX_RST"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_TX_Exch"
+                style="@style/text_new_user"
+                android:layout_width="100dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="TX Exch"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Nr"
+                app:layout_constraintEnd_toStartOf="@+id/editText_RX_RST"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_TX_Nr"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_RST"
+                style="@style/text_new_user"
+                android:layout_width="73dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="RX RST"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Exch"
+                app:layout_constraintEnd_toStartOf="@+id/editText_RX_Nr"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_TX_Exch"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_Nr"
+                style="@style/text_new_user"
+                android:layout_width="100dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="RX Nr"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_RST"
+                app:layout_constraintEnd_toStartOf="@+id/editText_RX_Exch"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_RX_RST"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_Exch"
+                style="@style/text_new_user"
+                android:layout_width="100dp"
+                android:layout_height="66dp"
+                android:layout_marginTop="104dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:ems="10"
+                android:hint="RX Exch"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Nr"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editText_RX_Nr"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_log_QSO"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="354dp"
+                android:layout_marginBottom="7dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Log QSO"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_wipe_QSO"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_wipe_QSO"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="354dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="wipe"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/button_log_QSO"
+                app:layout_constraintEnd_toStartOf="@+id/button_delete_QSO"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button_log_QSO"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_delete_QSO"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="354dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Delete QSO"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/button_wipe_QSO"
+                app:layout_constraintEnd_toStartOf="@+id/button_log_cancel"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button_wipe_QSO"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_log_cancel"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="354dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Cancel"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/button_delete_QSO"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button_delete_QSO"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
