modificações de layout e atualização.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <!--<androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -943,11 +943,11 @@
             <EditText
                 android:id="@+id/editText_RX_Call"
                 style="@style/text_new_user"
-                android:layout_width="150dp"
+                android:layout_width="145dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
                 android:layout_marginBottom="242dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Call"
                 android:inputType="text"
@@ -963,9 +963,9 @@
                 android:layout_width="73dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_rx"
                 android:ems="10"
-                android:hint="TX RST"
+                android:hint="RX RST"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Call"
                 app:layout_constraintEnd_toStartOf="@+id/editText_TX_Nr"
@@ -979,9 +979,9 @@
                 android:layout_width="100dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_rx"
                 android:ems="10"
-                android:hint="TX Nr"
+                android:hint="RX Nr"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_TX_RST"
                 app:layout_constraintEnd_toStartOf="@+id/editText_TX_Exch"
@@ -995,9 +995,9 @@
                 android:layout_width="100dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_rx"
                 android:ems="10"
-                android:hint="TX Exch"
+                android:hint="RX Exch"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Nr"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_RST"
@@ -1011,9 +1011,9 @@
                 android:layout_width="73dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_tx"
                 android:ems="10"
-                android:hint="RX RST"
+                android:hint="TX RST"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Exch"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_Nr"
@@ -1027,9 +1027,9 @@
                 android:layout_width="100dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_tx"
                 android:ems="10"
-                android:hint="RX Nr"
+                android:hint="TX Nr"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_RX_RST"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_Exch"
@@ -1043,9 +1043,9 @@
                 android:layout_width="100dp"
                 android:layout_height="66dp"
                 android:layout_marginTop="104dp"
-                android:background="@android:drawable/dialog_holo_light_frame"
+                android:background="@drawable/campo_tx"
                 android:ems="10"
-                android:hint="RX Exch"
+                android:hint="TX Exch"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Nr"
                 app:layout_constraintEnd_toEndOf="parent"
