--- a/app/src/main/res/drawable/campo_tx.xml
+++ b/app/src/main/res/drawable/campo_tx.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- Cor de fundo TX -->
-    <solid android:color="#0292fd"/> para o tom que preferir -->
+    <solid android:color="#f4510b"/> para o tom que preferir -->
     <!-- Contorno preto -->
     <stroke
         android:width="2dp"
