trabalho no layout do Logger

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -896,56 +896,55 @@
                 android:id="@+id/label_logger"
                 android:layout_width="213dp"
                 android:layout_height="36dp"
+                android:layout_marginStart="259dp"
+                android:layout_marginTop="49dp"
+                android:layout_marginEnd="259dp"
+                android:layout_marginBottom="326dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="Logger"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/editText_TX_Nr"
-                app:layout_constraintEnd_toStartOf="@+id/mode_indicator"
-                app:layout_constraintStart_toEndOf="@+id/qrg_indicator"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.21" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/qrg_indicator"
                 android:layout_width="197dp"
                 android:layout_height="65dp"
-                android:layout_marginEnd="534dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:gravity="center"
                 android:textColor="@color/design_default_color_primary"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/editText_RX_Call"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5" />
+                tools:layout_editor_absoluteX="42dp"
+                tools:layout_editor_absoluteY="39dp" />
 
             <TextView
                 android:id="@+id/mode_indicator"
                 android:layout_width="197dp"
                 android:layout_height="65dp"
-                android:layout_marginStart="534dp"
+                android:layout_marginStart="492dp"
+                android:layout_marginTop="39dp"
+                android:layout_marginEnd="42dp"
+                android:layout_marginBottom="307dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:gravity="center"
                 android:textColor="@color/design_default_color_primary"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/editText_RX_RST"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/editText_RX_Call"
                 style="@style/text_new_user"
-                android:layout_width="145dp"
+                android:layout_width="110dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
-                android:layout_marginBottom="242dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Call"
@@ -961,12 +960,13 @@
                 style="@style/text_new_user"
                 android:layout_width="73dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX RST"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Call"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/editText_TX_Nr"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_RX_Call"
@@ -977,12 +977,13 @@
                 style="@style/text_new_user"
                 android:layout_width="100dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Nr"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_RST"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/editText_TX_Exch"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_TX_RST"
@@ -993,12 +994,13 @@
                 style="@style/text_new_user"
                 android:layout_width="100dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Exch"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Nr"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_RST"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_TX_Nr"
@@ -1009,12 +1011,13 @@
                 style="@style/text_new_user"
                 android:layout_width="73dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
                 android:hint="TX RST"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_TX_Exch"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_Nr"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_TX_Exch"
@@ -1025,12 +1028,13 @@
                 style="@style/text_new_user"
                 android:layout_width="100dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
                 android:hint="TX Nr"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_RST"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/editText_RX_Exch"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_RX_RST"
@@ -1041,80 +1045,88 @@
                 style="@style/text_new_user"
                 android:layout_width="100dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
                 android:hint="TX Exch"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="@+id/editText_RX_Nr"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/editText_RX_Nr"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/button_wipe_QSO"
+                android:layout_width="130dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="214dp"
+                android:layout_marginTop="320dp"
+                android:layout_marginEnd="387dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="wipe"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
                 android:id="@+id/button_log_QSO"
                 android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="354dp"
-                android:layout_marginBottom="7dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="320dp"
+                android:layout_marginEnd="559dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="Log QSO"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button_wipe_QSO"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/button_wipe_QSO"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="354dp"
-                android:background="@drawable/rouded_button"
-                android:gravity="center"
-                android:text="wipe"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/button_log_QSO"
-                app:layout_constraintEnd_toStartOf="@+id/button_delete_QSO"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_log_QSO"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/button_delete_QSO"
                 android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="354dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="387dp"
+                android:layout_marginTop="320dp"
+                android:layout_marginEnd="214dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="Delete QSO"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/button_wipe_QSO"
-                app:layout_constraintEnd_toStartOf="@+id/button_log_cancel"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_wipe_QSO"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/button_log_cancel"
                 android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="354dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="559dp"
+                android:layout_marginTop="320dp"
+                android:layout_marginEnd="42dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="Cancel"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/button_delete_QSO"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_delete_QSO"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
